# artifacts/api-server/src/routes/index.ts
@@ -4,6 +4,8 @@ import checkRouter from "./check";
 import reportRouter from "./report";
 import adminRouter from "./admin";
 import authRouter from "./auth";
+import feedbackRouter from "./feedback";
+import statsRouter from "./stats";
 
 const router: IRouter = Router();
 
@@ -12,5 +14,7 @@ router.use(authRouter);
 router.use(checkRouter);
 router.use(reportRouter);
 router.use(adminRouter);
+router.use(feedbackRouter);
+router.use(statsRouter);
 
 export default router;
